--- a/app/src/main/res/layout/todo_item_layout.xml
+++ b/app/src/main/res/layout/todo_item_layout.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="todo"
+            type="id.ac.ubaya.informatika.todoapp_week8_160419007.model.Todo" />
+        <variable
+            name="listener"
+            type="id.ac.ubaya.informatika.todoapp_week8_160419007.view.TodoCheckedChangeListener" />// ini ambil dari interfaces.kt
+        <variable
+            name="editListener"
+            type="id.ac.ubaya.informatika.todoapp_week8_160419007.view.TodoEditClickListener" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,19 +24,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:text="CheckBox"
+        android:text="@{todo.title}"
+        android:onCheckedChanged="@{(cb,isChecked) -> listener.TodoCheckedChange(cb,isChecked,todo)}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" /> //cb itu button,ischecked boolean
 
     <ImageView
         android:id="@+id/imageEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:tag="@{todo.uuid}"
+        android:onClick="@{editListener::TodoEditClick}"
         android:layout_marginEnd="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/checkTask"
         app:layout_constraintTop_toTopOf="@+id/checkTask"
         app:srcCompat="@drawable/ic_baseline_edit_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
