--- a/app/src/main/res/layout/fragment_edit_to_do.xml
+++ b/app/src/main/res/layout/fragment_edit_to_do.xml
@@ -15,7 +15,7 @@
             type="id.ac.ubaya.informatika.todoapp_week8_160419007.view.SaveChangesListener" />
     </data>
 <FrameLayout
-    android:id="@+id/txtNotes"
+    android:id="@+id/FrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.CreateToDoFragment">
